shared.css
a { 
    color: rgb(255, 100, 100);
}

.footer {
    line-height: 1.0;
    width: 50%;
    font-size: 80%;
}

.center {
    text-align: center;
    margin: auto;
}

.width_50 {
    width: 50%;
}

.width_70 {
    width: 70%;
}

.width_85 {
    width: 85%;
}

.width_90 {
    width: 90%;
}

.dark_color {
    font-size: 120%;
    line-height: 1.5;
    background-color: #1C1C1C;
    color: #FAFAFA;
    border: 5px solid rgba(128, 128, 128, 0.7);
}

.header {
    line-height: 250%;
    font-size: 200%;
    width: 90%;
    padding: 10px;
    background-clip: content-box, padding-box;
}

.header_color {
    background-color: rgb(90, 90, 90);
}

.header_color:hover {
    background-color: rgb(110, 110, 110);
}

.content {
    padding: 15px;
}

.post {
    padding: 30px;
    outline: 2px solid white;
    outline-offset: -10px;
}

.post_title {
    font-weight: bold;
    font-size: 140%;
    padding: 10px;
    border-bottom: 2px solid gray;
}

.post_body {
    padding: 5px;
    font-size: 110%;
}

.interactionbox {
    margin: 20px;
    font-size: 90%;
}

.maininput {
    width: 100%;
}

.roundedinput {
    border-radius: 20px;
    height: 35px;
}

.input_section {
    padding: 6px;
}

.search_div {
    padding-top: 15px;
}

.selectfield {
    border: 3px solid rgb(136, 136, 136);
}

.microarea_result {
    font-size: 110%;
    padding: 20px;
    border-top: 1px solid gray;
}

td {
    padding: 15px;
    border-radius: 5px;
    border: 1px solid gray;
}

.side_by_side_container {
    display: flex;
}

.flex_item {
    flex-grow: 1;
}

